fixtures/tests/snapshots/snapshot__complex_ignore_config.snap
---
source: fixtures/tests/snapshot.rs
expression: expansion
---
#![feature(prelude_import)]
#[prelude_import]
use std::prelude::rust_2021::*;
#[macro_use]
extern crate std;
use std::path::Path;
use fixtures::fixtures;
fn test(_path: &Path) {}
mod test {
    use super::*;
    extern crate test;
    #[rustc_test_marker = "test::file_1_dot_txt"]
    #[doc(hidden)]
    pub const file_1_dot_txt: test::TestDescAndFn = test::TestDescAndFn {
        desc: test::TestDesc {
            name: test::StaticTestName("test::file_1_dot_txt"),
            ignore: false,
            ignore_message: ::core::option::Option::None,
            source_file: "fixtures/examples/complex_ignore_config.rs",
            start_line: 20usize,
            start_col: 4usize,
            end_line: 20usize,
            end_col: 8usize,
            compile_fail: false,
            no_run: false,
            should_panic: test::ShouldPanic::No,
            test_type: test::TestType::Unknown,
        },
        testfn: test::StaticTestFn(
            #[coverage(off)]
            || test::assert_test_result(file_1_dot_txt()),
        ),
    };
    pub fn file_1_dot_txt() {
        test(
            ::std::path::Path::new(
                "<repo>/tests/fixtures/complex_ignore_config/file_1.txt",
            ),
        )
    }
    extern crate test;
    #[rustc_test_marker = "test::file_2_dot_txt"]
    #[doc(hidden)]
    pub const file_2_dot_txt: test::TestDescAndFn = test::TestDescAndFn {
        desc: test::TestDesc {
            name: test::StaticTestName("test::file_2_dot_txt"),
            ignore: true,
            ignore_message: ::core::option::Option::Some(
                "default reason for ignoring file",
            ),
            source_file: "fixtures/examples/complex_ignore_config.rs",
            start_line: 20usize,
            start_col: 4usize,
            end_line: 20usize,
            end_col: 8usize,
            compile_fail: false,
            no_run: false,
            should_panic: test::ShouldPanic::No,
            test_type: test::TestType::Unknown,
        },
        testfn: test::StaticTestFn(
            #[coverage(off)]
            || test::assert_test_result(file_2_dot_txt()),
        ),
    };
    #[ignore = "default reason for ignoring file"]
    pub fn file_2_dot_txt() {
        test(
            ::std::path::Path::new(
                "<repo>/tests/fixtures/complex_ignore_config/file_2.txt",
            ),
        )
    }
    extern crate test;
    #[rustc_test_marker = "test::file_3_dot_txt"]
    #[doc(hidden)]
    pub const file_3_dot_txt: test::TestDescAndFn = test::TestDescAndFn {
        desc: test::TestDesc {
            name: test::StaticTestName("test::file_3_dot_txt"),
            ignore: true,
            ignore_message: ::core::option::Option::Some(
                "specific reason for ignoring file 3",
            ),
            source_file: "fixtures/examples/complex_ignore_config.rs",
            start_line: 20usize,
            start_col: 4usize,
            end_line: 20usize,
            end_col: 8usize,
            compile_fail: false,
            no_run: false,
            should_panic: test::ShouldPanic::No,
            test_type: test::TestType::Unknown,
        },
        testfn: test::StaticTestFn(
            #[coverage(off)]
            || test::assert_test_result(file_3_dot_txt()),
        ),
    };
    #[ignore = "specific reason for ignoring file 3"]
    pub fn file_3_dot_txt() {
        test(
            ::std::path::Path::new(
                "<repo>/tests/fixtures/complex_ignore_config/file_3.txt",
            ),
        )
    }
    pub const EXPANSIONS: &[fn()] = &[file_1_dot_txt, file_2_dot_txt, file_3_dot_txt];
}
#[allow(dead_code)]
fn main() {}
#[rustc_main]
#[coverage(off)]
#[doc(hidden)]
pub fn main() -> () {
    extern crate test;
    test::test_main_static(&[&file_1_dot_txt, &file_2_dot_txt, &file_3_dot_txt])
}
