fixtures/tests/snapshots/snapshot__criterion.snap
---
source: fixtures/tests/snapshot.rs
expression: expansion
---
#![feature(prelude_import)]
#[prelude_import]
use std::prelude::rust_2021::*;
#[macro_use]
extern crate std;
use std::path::Path;
use fixtures::fixtures;
struct Criterion;
fn bench(_path: &Path, _c: &mut Criterion) {}
mod bench {
    use super::*;
    pub fn file_1_dot_txt(_c: &mut Criterion) {
        bench(
            ::std::path::Path::new(
                "<repo>/tests/fixtures/criterion/file_1.txt",
            ),
            _c,
        )
    }
    pub const EXPANSIONS: &[fn(_c: &mut Criterion)] = &[file_1_dot_txt];
}
fn benches() {
    let mut criterion = Criterion;
    for bench in bench::EXPANSIONS {
        bench(&mut criterion);
    }
}
#[allow(dead_code)]
fn main() {
    benches();
}
#[rustc_main]
#[coverage(off)]
#[doc(hidden)]
pub fn main() -> () {
    extern crate test;
    test::test_main_static(&[])
}
